--- a/index.html
+++ b/index.html
@@ -1,49 +1,58 @@
-<!DOCTYPE html>
 <html>
    <head>
       <meta charset="utf-8">
       <title>
          Новости Челябинска
       </title>
+      <link rel="stylesheet" href="style.css">
    </head>
   <body>
-      <h1>
+  <header class="header">
+     <h1 class="header__title">
         <center>
-            Новости Челябинска
+          Заголовок для шапки
         </center>
      </h1>
-   <nav>
+     <input type="header__button" value=" Кнопка в шапке ">
+     <p class="header__text">
+       Текст для Шапки
+     </p>
+   </header>
+      <h2 class="page__title">
          <center>
-         <a href="1.html">
-            Новости
-         </a>
-         <a href="2.html">
+            Заголовок для блока
+         </center>
+      </h2>
+   <nav class="page-menu">
+     <center>
+       <input type="page-menu__button" value=" Новости ">
+         <a href="2.html" class="page-menu__term">
            |Проишествия
          </a>
-         <a href="3.html">
+         <a href="3.html" class="page-menu__term">
             |Спорт
          </a>
-         <a href="4.html">
+         <a href="4.html" class="page-menu__term">
             |Культура
          </a>
       </center>
     </nav>
-   <section>
-      <article>
-         <header>
-           <h1>
-             <center>
+    <section class="section">
+      <article class="section__article">
+         <header class="section__header">
+           <h1 class="title">
+             <center class="title__text">
                 В Челябинской области закроют ещё четыре ковидные базы.
              </center>
-             <p>
+             <p class="title__text">
                 В августе 16 отделений, перепрофилированных во время пандемии на COVID-19, уже
 вернулись к привычной работе.
              </p>
-             <main>
+             <main class="title__text">
                 В Челябинске это Областной перинатальный центр, роддом ГКБ № 8, гинекологическ
 е отделение ГКБ № 1 и ГКБ № 2, ГКБ № 11 и Областной госпиталь ветеранов.
              </main>
-             <blockquote> 
+             <blockquote class="title__text">
                 Также вернулись к «мирной жизни» медицинские подразделения в разных городах ре
 гиона, в том числе закрыты отделения долечивания ковидных пневмоний в Каслях, Увелке и Сатке.
              </blockquote>
