--- a/index.html
+++ b/index.html
@@ -1,49 +1,60 @@
-<!DOCTYPE html>
 <html>
    <head>
       <meta charset="utf-8">
       <title>
          Новости Челябинска
       </title>
+      <link rel="stylesheet" href="style.css">
+     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@200;700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
    </head>
   <body>
-      <h1>
+  <header class="header">
+     <h1 class="header__title">
+        <center>
+          Заголовок для шапки
+        </center>
+     </h1>
+     <input type="header__button" value=" Кнопка в шапке ">
+     <p class="header__text">
+       Текст для Шапки
+     </p>
+   </header>
+      <h2 class="page__title">
          <center>
-            Новости Челябинска
+            Заголовок для блока
          </center>
-      </h1>
-   <nav>
-      <center>
-         <a href="1.html">
-            Новости
+      </h2>
+   <nav class="page-menu">
+     <center>
+       <input type="page-menu__button" value=" Новости ">
+         <a href="2.html" class="page-menu__term">
+           |Проишествия
          </a>
-         <a href="2.html">
-            |Проишествия
-         </a> 
-         <a href="3.html">
+         <a href="3.html" class="page-menu__term">
             |Спорт
          </a>
-         <a href="4.html">
+         <a href="4.html" class="page-menu__term">
             |Культура
          </a>
       </center>
-   </nav>
-   <section>
-      <article>
-         <header>
-           <h1>
-             <center>
+    </nav>
+    <section class="section">
+      <article class="section__article">
+         <header class="section__header">
+           <h1 class="title">
+             <center class="title__text">
                 В Челябинской области закроют ещё четыре ковидные базы.
              </center>
-             <p>
+             <p class="title__text">
                 В августе 16 отделений, перепрофилированных во время пандемии на COVID-19, уже
-вернулись к привычной работе. 
+вернулись к привычной работе.
              </p>
-             <main>
+             <main class="title__text">
                 В Челябинске это Областной перинатальный центр, роддом ГКБ № 8, гинекологическ
 е отделение ГКБ № 1 и ГКБ № 2, ГКБ № 11 и Областной госпиталь ветеранов.
              </main>
-             <blockquote> 
+             <blockquote class="title__text">
                 Также вернулись к «мирной жизни» медицинские подразделения в разных городах ре
 гиона, в том числе закрыты отделения долечивания ковидных пневмоний в Каслях, Увелке и Сатке.
              </blockquote>
@@ -51,26 +62,30 @@
          </header>
        </article>
      </section>
-     <address> 
-         О компании 
+     <address class="address">
+       О компании
      </address>
-     <footer>
-        <p>
-           <center>
-           <a href="1.html">
-              Реклама на сайте
-           </a>
-           <a href="2.html">
-              |Наши вакансии
-           </a> 
-           <a href="3.html">
-              |Техподдержка
-           </a>
-           <a href="4.html"> 
-              |Команда проекта
-           </a> 
-           </center>
-        </p>
+     <footer class="footer">
+       <h3 class="footer__title">
+         Заголовок
+       </h3 >
+       <p class="menu">
+         <center>
+         <input type="menu__button" value=" Реклама на сайте ">
+         <a href="2.html" class="menu__jewel">
+           |Наши вакансии
+         </a>
+         <a href="3.html" class="menu__jewel">
+           |Техподдержка
+         </a>
+         <a href="4.html" class="menu__jewel">
+           |Команда проекта
+         </a>
+         <p class="menu__text">
+           Текст для блока подвала
+         </p>
+         </center>
+       </p>
      </footer>
-   </body>
+  </body>
 </html>
